...
  "sparkle-plain-bare": require("../../../assets/illustrations/sparkle-plain-bare.jpg"),
  "sparkle-little-bare": require("../../../assets/illustrations/sparkle-little-bare.jpg"),
  "sparkle-heavy-bare": require("../../../assets/illustrations/sparkle-heavy-bare.jpg"),
  "sparkle-bridal-bare": require("../../../assets/illustrations/sparkle-bridal-bare.jpg"),
  "shape-pear": require("../../../assets/illustrations/shape-pear.jpg"),
  "shape-apple": require("../../../assets/illustrations/shape-apple.jpg"),
  "shape-hourglass": require("../../../assets/illustrations/shape-hourglass.jpg"),
  "shape-rectangle": require("../../../assets/illustrations/shape-rectangle.jpg"),
  "shape-inverted-triangle": require("../../../assets/illustrations/shape-inverted-triangle.jpg"),
  "shape-athletic": require("../../../assets/illustrations/shape-athletic.jpg"),
} as const;

type Bare = `${string}-bare` & keyof typeof illustrations;
...
