appId: com.zaimimran.almari
# UC-F01-05
---
- runFlow: ../lib/sample-closet.yaml
- tapOn:
    id: "header-profile"
- assertVisible:
    id: "profile"
- scrollUntilVisible:
    element:
      id: "profile-body"
- tapOn:
    id: "profile-body"
- assertVisible:
    id: "body-height"
- swipe:
    from:
      id: "body-height"
    direction: LEFT
- assertVisible:
    id: "body-height-clear"
- swipe:
    from:
      id: "body-weight"
    direction: RIGHT
- assertVisible:
    id: "body-weight-clear"
- scrollUntilVisible:
    element:
      id: "shape-hourglass"
- tapOn:
    id: "shape-hourglass"
- tapOn:
    id: "onboarding-next"
- assertVisible:
    id: "profile"
