appId: com.zaimimran.almari
---
- launchApp:
    clearState: true
    permissions:
      all: allow
- extendedWaitUntil:
    visible:
      id: "welcome-start"
    timeout: 20000
- tapOn:
    id: "welcome-start"
- repeat:
    times: 15
    while:
      notVisible: "You are set"
    commands:
      - tapOn:
          id: "onboarding-next"
- assertVisible: "You are set"
